train changed to resubstitution

--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -40,6 +40,21 @@
   year = {1998}
 }
 
+@book{devroye_probabilistic_1997,
+  address = {New York},
+  edition = {Corrected edition},
+  title = {A {{Probabilistic Theory}} of {{Pattern Recognition}}},
+  isbn = {978-0-387-94618-4},
+  abstract = {A self-contained and coherent account of probabilistic techniques, covering: distance measures, kernel rules, nearest neighbour rules, Vapnik-Chervonenkis theory, parametric classification, and feature extraction. Each chapter concludes with problems and exercises to further the readers understanding. Both research workers and graduate students will benefit from this wide-ranging and up-to-date account of a fast- moving field.},
+  language = {English},
+  timestamp = {2016-08-05T06:04:21Z},
+  publisher = {{Springer}},
+  author = {Devroye, Luc and Gy{\"o}rfi, L{\'a}szl{\'o} and Lugosi, Gabor},
+  month = mar,
+  year = {1997},
+  keywords = {Computers / Computer Vision \& Pattern Recognition,Computers / Optical Data Processing,Mathematics / Probability \& Statistics / General,Mathematics / Probability \& Statistics / Stochastic Processes,Psychology / Cognitive Psychology \& Cognition}
+}
+
 @article{lehmann_parametric_2009,
   title = {Parametric versus nonparametrics: two alternative methodologies},
   volume = {21},
