train changed to resubstitution

--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -761,4 +761,43 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   file = {Scott_Nowak_2005_A Neyman-Pearson approach to statistical learning.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TNIVPEG7/Scott_Nowak_2005_A Neyman-Pearson approach to statistical learning.pdf:application/pdf;IEEE Xplore Abstract Record:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/V783WGI9/abs_all.html:text/html}
 }
 
+@article{mclachlan_bias_1976,
+  title = {The bias of the apparent error rate in discriminant analysis},
+  volume = {63},
+  issn = {0006-3444, 1464-3510},
+  doi = {10.1093/biomet/63.2.239},
+  abstract = {SUMMARY The apparent error rate is a commonly used estimator of the actual error rate in discriminant analysis. In this study the asymptotic bias of the apparent error rate is derived in the context of two multivariate normal populations with unknown different means and unknown common covariance matrix. From the derived expansion a correction term ia available for reducing the bias of the apparent error rate from the first to the second order with respect to the reciprocals of the initial sample sizes. Also, some previously unanswered questions on inequalities between the average apparent, the optimal, and the average actual error rates are solved.},
+  language = {en},
+  timestamp = {2016-08-05T06:27:03Z},
+  number = {2},
+  urldate = {2016-08-05},
+  journal = {Biometrika},
+  author = {McLACHLAN, G. J.},
+  month = jan,
+  year = {1976},
+  keywords = {Bias of apparent error rate,Error rates; optimal; actual and apparent,Inequalities between error rates,Linear discriminant function},
+  pages = {239--244},
+  file = {McLACHLAN_1976_The bias of the apparent error rate in discriminant analysis.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/X9S3IQWJ/McLACHLAN_1976_The bias of the apparent error rate in discriminant analysis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/EC39SN57/239.html:text/html}
+}
+
+@article{braga-neto_is_2004,
+  title = {Is cross-validation better than resubstitution for ranking genes?},
+  volume = {20},
+  issn = {1367-4803, 1460-2059},
+  doi = {10.1093/bioinformatics/btg399},
+  abstract = {Motivation: Ranking gene feature sets is a key issue for both phenotype classification, for instance, tumor classification in a DNA microarray experiment, and prediction in the context of genetic regulatory networks. Two broad methods are available to estimate the error (misclassification rate) of a classifier. Resubstitution fits a single classifier to the data, and applies this classifier in turn to each data observation. Cross-validation (in leave-one-out form) removes each observation in turn, constructs the classifier, and then computes whether this leave-one-out classifier correctly classifies the deleted observation. Resubstitution typically underestimates classifier error, severely so in many cases. Cross-validation has the advantage of producing an effectively unbiased error estimate, but the estimate is highly variable. In many applications it is not the misclassification rate per se that is of interest, but rather the construction of gene sets that have the potential to classify or predict. Hence, one needs to rank feature sets based on their performance.
+Results: A model-based approach is used to compare the ranking performances of resubstitution and cross-validation for classification based on real-valued feature sets and for prediction in the context of probabilistic Boolean networks (PBNs). For classification, a Gaussian model is considered, along with classification via linear discriminant analysis and the 3-nearest-neighbor classification rule. Prediction is examined in the steady-distribution of a PBN. Three metrics are proposed to compare feature-set ranking based on error estimation with ranking based on the true error, which is known owing to the model-based approach. In all cases, resubstitution is competitive with cross-validation relative to ranking accuracy. This is in addition to the enormous savings in computation time afforded by resubstitution.},
+  language = {en},
+  timestamp = {2016-08-05T06:36:42Z},
+  number = {2},
+  urldate = {2016-08-05},
+  journal = {Bioinformatics},
+  author = {Braga-Neto, Ulisses and Hashimoto, Ronaldo and Dougherty, Edward R. and Nguyen, Danh V. and Carroll, Raymond J.},
+  month = jan,
+  year = {2004},
+  pages = {253--258},
+  file = {Braga-Neto et al_2004_Is cross-validation better than resubstitution for ranking genes.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/V3JSA76W/Braga-Neto et al_2004_Is cross-validation better than resubstitution for ranking genes.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/55E75EJ6/253.html:text/html},
+  pmid = {14734317}
+}
+
 
