--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -168,7 +168,7 @@ We thus also consider the z-scored accuracy: $|\acc_{\hypEstim}-\dominant|/\sqrt
 Were we interested in an unbiased estimator of the prediction error, there is no question that some independent validation is in order. 
 Since we are merely interested in detecting a difference between classes, a biased error estimate is not an issue provided that bias is consistent over all permutations. 
 The underlying intuition is that if the exact same computation is performed over all permutations, then a permutation test will be ``fair'', i.e., will not inflate the false positive rate. 
-We will thus be considering both cross validated accuracies, and \emph{train} accuracies as our test statistics, a.k.a.\ \emph{resubstitution classification}. 
+We will thus be considering both cross validated accuracies, and resubstitution accuracies as our test statistics, a.k.a.\ \emph{resubstitution classification}. 
 
 
 \paragraph{Refolding?}
