--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -305,7 +305,8 @@ There is really no reason to use it.
 \item Both accuracy and location tests are innapropriate for scale alternatives (Figure~\ref{fig:scale_change}). 
 This was to be expeted and is reported mostly as a sanity check.
 \item The presence of heavy tails (Figure~\ref{fig:t_null}) may reduce power, but does not quantitatively change results. 
-\item ... [TODO: effect of balancing].
+\item Balancing typically has no effect. 
+It increased power only for the z-scored statistics (Figure~\ref{fig:simulation_1}). This is surprising given they were precisely designed to deal with the presence of imbalance. 
 \item ... [TODO: correlation between voxels].
 \item ... [TODO: effect of tunning parameter].
 \end{enumerate}
