--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -307,8 +307,8 @@ This was to be expeted and is reported mostly as a sanity check.
 \item The presence of heavy tails (Figure~\ref{fig:t_null}) may reduce power, but does not quantitatively change results. 
 \item Balancing typically has no effect. 
 It increased power only for the z-scored statistics (Figure~\ref{fig:simulation_1}). This is surprising given they were precisely designed to deal with the presence of imbalance. 
+\item Varying the accuracy test's tunning parameter, such as the cost (i.e. margins) has no effect on the power of the test. 
 \item ... [TODO: correlation between voxels].
-\item ... [TODO: effect of tunning parameter].
 \end{enumerate}
 
 
